# RDF2Vec_Structure

./: README.md  buildGraph.py  pyproject.toml  teste.py
deploy/: cluster_rdf2vec.sh
emb-rdf2vec/: inUseRdf2Vec.py  runRdf2Vec.py
pyrdf2vec/: rdf2vec.py
pyrdf2vec/graphs/: kg.py
pyrdf2vec/walkers/: __init__.py
