[project]
name = "workshop-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "aiohttp==3.8.5",
    "cachetools>=5.5.0",
    "gensim==4.3.2",
    "matplotlib==3.8.0",
    "nest-asyncio>=1.6.0",
    "networkx==3.1",
    "numpy==1.26.0",
    "rdflib==7.0.0",
    "requests>=2.32.3",
    "scikit-learn==1.3.1",
    "scipy==1.11.3",
    "seaborn==0.13.0",
    "sparqlwrapper==2.0.0",
    "tqdm==4.66.1",
]
